# ollamate

./: .gitignore  README.md  pyproject.toml  requirements.txt  taskfile.yml
src/ollamate/: __init__.py  bot.py  main.py  settings.json  settings.py  utils.py
src/ollamate/ui/: app.py
src/ollamate/ui/widgets/: chat_box.py  message_box.py
src/ollamate/ui/windows/: about_window.py  history_window.py  models_window.py  settings_window.py
